--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -224,13 +224,14 @@ else
                     <label> @Resources.Dependencies_ID </label>
                     <input class="form-control" id="Dependencies[{i}].Id" name="Dependencies[{i}].Id" readonly disabled />
                 </div>
-                <div class="col pure-control-group">
-                    <label> @Resources.Known_Dependency_Name </label>
-                    <input class="form-control" id="Dependencies_{i}__.ComponentName" name="Dependencies[{i}].ComponentName" />
-                    <span class="field-validation-valid text-danger"
-                          data-valmsg-for="Dependencies[{i}].ComponentName"
-                          data-valmsg-replace="true">
-                    </span>
+                <div class="pure-control-group">
+                    <label for="Dependencies_{i}__KnownDependency_ComponentName">ComponentName</label>
+                    <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text"></div>
+                    <span class="field-validation-valid" data-valmsg-for="Dependencies[{i}].KnownDependency.ComponentName" data-valmsg-replace="true"></span>
+                    <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)" style="width: 206.944px" aria-required="true" aria-invalid="false">
+                        
+                        <option>Add New...</option>
+                    </select>                    
                     <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
                 </div>
                 <div class="col pure-control-group">
@@ -257,7 +258,7 @@ else
         {
             <div class="pure-control-group">
                 @Html.LabelFor(m => m.Dependencies[i].KnownDependency.ComponentName)
-                @*@Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName)*@
+                <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName)</div>
                 @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
                 @{
                     var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
@@ -290,7 +291,7 @@ else
                     <input class="pure-form valid" id=@txtBoxId type="text" />
                     <button type="button" onclick="checkIfKDExists(@(i), @txtBoxId)" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
                 }
-</div>
+            </div>
             <div class="pure-control-group">
                 @Html.LabelFor(m => m.Dependencies[i].VersionInUse)
                 @Html.TextBoxFor(m => m.Dependencies[i].VersionInUse)
@@ -325,69 +326,6 @@ else
 <script src="~/scripts/ServiceAccountsEdit.js"></script>
 <script src="~/scripts/DependenciesEdit.js"></script>
 <script>
-    window.onload = function () {
-        $(".dropDownKD").each(function () {
-            var index = this.id;
-            if (this.value == "Add New...") {
-                $("#newKD-" + index).css("display", "inline-block");
-            } else {
-                $("#newKD-" + index).css("display", "none");
-            }
-        })
-    }
-    function DisplayComponentNameNewInputField(text, index) {
-        if (text == "Add New...") {
-            $("#newKD-" + index).css("display", "inline-block");
-        } else {
-            $("#newKD-" + index).css("display", "none");
-        }
-    }
-    function checkIfKDExists(i, input) {
-        var newKDName = input.value;
-        var dropDown = document.getElementById(`Dependencies_${i}__KnownDependenciesId`);
-        var exists = 0;
-        for (j = 0; j < dropDown.options.length; j++) {
-            if (newKDName == dropDown.options[j].text) {
-                exists = 1;
-                break;
-            }
-        }
-        if (newKDName == "") {
-            alert("Please input a value, the new component name cannot be blank");
-        } else if (exists == 1) {
-            alert("The component name entered already exists, please input a component name that does not exist or select the existing one");
-        } else {
-            addKDtoDropDown(i, newKDName, dropDown);
-        }
-    }
-    function addKDtoDropDown(i, newKDName, dropDown) {
-        $.ajax({
-            type: "GET",
-            contentType: "application/json; charset=utf-8",
-            url: `@Url.Action("GenerateNewGuid", "Repository")`,
-            data: { "componentName": newKDName },
-            success: function (response) {
-                var option = document.createElement("option");
-                option.text = newKDName;
-                option.value = response;
-                option.selected = true;
-                dropDown.add(option);
-
-                var index = `Dependencies_${i}__KnownDependenciesId`;
-                $("#newKD-" + index).css("display", "none");
-            }, 
-            failure: function (response) {
-                alert("Failed to add new component name");
-            }
-        });
-        return false;
-
-        // 1. Get rid of known dependency function --
-        // 2. Get rid of partial view --
-        // 3. Add check to see if known dependency exists --
-        // 4. Add css styling to make it look good
-        // 5. Get rid of commented code
-        // 6. Put my code into javascript file
-    }
+    //In DependenciesEdit.js
 </script>
 
